overflow trying to fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
 }
 
 body {
-    width: 100vw;
-    overflow-x: hidden;
+    /* width: 100vw;
+    overflow-x: hidden; */
 }
 
 .headline-pages {
